prePilot.out
  File "./main.py", line 318
    log_file.write(.write('-' * 89)
                   ^
SyntaxError: invalid syntax
